--- a/client/src/Components/Detail/Detail.css
+++ b/client/src/Components/Detail/Detail.css
@@ -1,5 +1,52 @@
 .detail{
     text-align: center;
-    color: rgb(252, 252, 252);
+    background-image: url('../../img/9.jpg');
+    background-position: center;
+    background-size: cover;
+    height: 100vh;
+} 
+
+.padre-container{
+    text-align: center;
+    border-radius: 25px;
+    margin-top: 50px;
+    width: 780px;
+    margin-left: 780px;
+    border: 0.3rem solid rgb(0, 0, 0)
 }
 
+.imagen{
+    width: 400px;
+    border-radius: 15px;
+    padding-top: 30px;
+}
+
+.bot{
+    padding-top: 40px;
+    display: flex;
+    padding-left: 80px;
+}
+
+.boton-volver{
+    font-size: 28px;
+    margin-top: 20px;
+    border-radius: 5px;
+    background-color: rgba(34, 134, 121, 0.25);
+    color: rgb(0, 0, 0);
+    cursor: pointer; 
+    box-shadow: 10px 8px 10px rgb(115, 106, 106);
+}
+.boton-volver:hover{
+    box-shadow: 10px 8px 10px rgb(93, 86, 86);
+}
+
+
+.color{
+    color:azure;
+    font-size: 20px;
+
+}
+.color-act{
+    color:rgb(162, 17, 17);
+    font-size:xx-large;
+}
