--- a/client/src/Components/Formulario/Formulario.css
+++ b/client/src/Components/Formulario/Formulario.css
@@ -9,14 +9,14 @@
 .boton{
     font-size: 28px;
     margin-top: 45px;
-    margin-left: 80px;
+    margin-right: 2100px;
     border-radius: 5px;
     background-color: hsla(0,0%,100%,.25);
     color: rgb(0, 0, 0);
+    cursor: pointer; 
 }
 .boton:hover{
-    color: aliceblue;
-    border:  0.9px solid aliceblue;
+    box-shadow: 10px 8px 10px rgb(93, 86, 86);
 }
 .formato{
     border-radius: 35px;
@@ -25,6 +25,12 @@
     margin-top: 90px;
     margin-left: 800px;
     margin-right: 800px;
+}
+
+.label{
+    color: black;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: x-large;
 }
 
 .h1{
@@ -48,7 +54,7 @@
     padding-bottom: 20px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
-.inputName{
+.input{
     text-align: center;
     padding:5px 10px 5px 10px;
     border-radius: 20px;
@@ -103,4 +109,8 @@
     margin-top: 1em;
     margin-bottom: 2.5em;
     background-color: brown;
+}
+.error{
+    color: red;
+    font-size: x-large;
 }
