--- a/client/src/Components/Home/Home.css
+++ b/client/src/Components/Home/Home.css
@@ -1,8 +1,8 @@
 .background{
-  background-image: url('../../img/6.jpg');
+  background-image: url('../../img/8.jpg');
   background-position: center;
   background-size: cover;
-  height: 98vh;
+  height: 100vh;
 }
 
 .caja-1{
@@ -15,8 +15,37 @@
    padding-bottom: 50px;
 }
 
-.caja-2-1{
- text-align: center;
- margin-left: 1000px;
- margin-right: 1000px;
+.home-card{
+  text-align: center;
+  width: 296px;
+  margin: 30px 60px 10px 50px;
+  display: inline-table;
+  border: 8px double rgba(0, 0, 0, 0.768);
+  border-radius: 0px 0px 30px 30px;
+  font-size: 16px;
+  color: black;
+}
+
+/*FILTROS*/
+.span{
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-size: 20px;
+  
+  /* padding: 0px 3px 0px 0px; */
+  color: black;
+}
+
+.select{
+  margin: 30px 50px 0px 0px;
+  padding: 5px;
+  border-radius: 20px;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-size:medium;
+}
+
+.refresh{
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  padding: 5px;
+  font-size: 18px;
+  border-radius: 20px;
 }
