--- a/client/src/Components/SearchBar/SearchBar.css
+++ b/client/src/Components/SearchBar/SearchBar.css
@@ -1,3 +1,57 @@
-.search{
- color: rgb(255, 255, 255)
+.inicio_boton{
+    height: 31px;;
+    margin-top: 30px;
+    font-size: 28px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    border-radius: 10px;
+    padding-bottom: 35px;
+    margin-right: 500px;
+    margin-left: 140px;
+    box-shadow: 10px 8px 10px rgb(115, 106, 106);
+    cursor: pointer; 
+    color:rgb(0, 0, 0);
+    background-color:  rgba(179, 188, 47, 0.65);
+}
+.inicio_boton:hover{
+    box-shadow: 10px 8px 10px rgb(93, 86, 86);
+}
+
+.busqueda{
+    width: 450px;
+    height: 25px;
+    border-radius: 10px ;
+   padding: 17px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 28px;
+}
+
+.buscar{
+    border-radius: 10px ;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 28px;
+    box-shadow: 10px 8px 10px  rgb(115, 106, 106);
+    cursor: pointer;
+    color:rgb(0, 0, 0);
+    background-color:   rgba(179, 188, 47, 0.65);
+    margin-left: 10px;
+}
+.buscar:hover{
+    box-shadow: 10px 8px 10px rgb(93, 86, 86);
+}
+
+.createcountry_boton{
+    height: 31px;
+    font-size: 28px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    border-radius: 10px;
+    padding-bottom: 35px;
+    margin-left: 420px;
+    margin-right: 100px;
+    box-shadow: 10px 8px 10px rgb(115, 106, 106);
+    color:rgb(0, 0, 0);
+    background-color:  rgba(179, 188, 47, 0.65);
+    cursor:pointer;
+}
+.createcountry_boton:hover{
+    box-shadow: 10px 8px 10px rgb(93, 86, 86);
 }
